--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>spring-jenkins-integration-sample</finalName>
     </build>
 
 </project>
